<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_trending"
            android:icon="@drawable/ic_trending_black_48dp"
            android:title="@string/title_trending"
            android:checkable="true"/>
        <item
            android:id="@+id/nav_collections"
            android:icon="@drawable/ic_collections_black_48dp"
            android:title="@string/title_collections"
            android:checkable="true" />
        <item
            android:id="@+id/nav_watch_later"
            android:icon="@drawable/ic_watch_later_black_48dp"
            android:title="@string/title_watch_later"
            android:checkable="true" />
    </group>

    <item android:title="@string/title_others">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_white_24dp"
                android:title="@string/title_settings" />
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/title_feedback" />
        </menu>
    </item>

</menu>
